Resolved grid alignment problem in media-query for Footer Section

--- a/style.css
+++ b/style.css
@@ -660,7 +660,7 @@ body{
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 5.67rem;
     width: 58%;
-    padding: 2rem 0;
+    padding: 2rem 1rem;
 }
 
 .footer-grid-heading{
@@ -699,11 +699,21 @@ ul{
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        padding-left: 4rem;
         
     }
+    .footer-top{
+        width: 100%;
+        align-items: center;
+        text-align: center;
+    }
+
     .footer-grid{
+        width: fit-content;
+        margin: 0 auto;
         grid-template-columns: repeat(2, 1fr);
-        justify-content: space-evenly;
+        gap: 2rem 4rem;
+        justify-items: start;
     }
 }
 
